Fix text overflow in Note component

--- a/src/components/Note.css
+++ b/src/components/Note.css
@@ -5,4 +5,7 @@
     padding: 5px;
     background-color: lightgray;
     margin: 5px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;;
 }
